--- a/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
@@ -1,44 +1,50 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net461;netstandard2.0;net6.0</TargetFrameworks>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="fiskaltrust.interface" Version="1.3.1" />
-    <PackageReference Include="Grpc.Core" Version="2.28.1" />
-    <PackageReference Include="protobuf-net.Grpc.Native" Version="1.0.37" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="fiskaltrust.interface" Version="1.3.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\fiskaltrust.Middleware.Interface.Client.Common\fiskaltrust.Middleware.Interface.Client.Common.csproj">
-      <PrivateAssets>all</PrivateAssets>
-    </ProjectReference>
-  </ItemGroup>
-  
-  <ItemGroup>
-    <_PackageFiles Include="$(OutputPath)\net461\fiskaltrust.Middleware.Interface.Client.Common.dll">
-      <BuildAction>None</BuildAction>
-      <PackagePath>lib\net461\</PackagePath>
-    </_PackageFiles>
-    <_PackageFiles Include="$(OutputPath)\netstandard2.0\fiskaltrust.Middleware.Interface.Client.Common.dll">
-      <BuildAction>None</BuildAction>
-      <PackagePath>lib\netstandard2.0\</PackagePath>
-    </_PackageFiles>
-  </ItemGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' == 'net461' or '$(TargetFramework)' == 'netstandard2.0' ">
+		<PackageReference Include="Grpc.Core" Version="2.28.1" />
+		<PackageReference Include="protobuf-net.Grpc.Native" Version="1.0.37" />
+	</ItemGroup>
 
-  <PropertyGroup>
-    <PackageId>fiskaltrust.Middleware.Interface.Client.Grpc</PackageId>
-    <Authors>fiskaltrust</Authors>
-    <Company>fiskaltrust</Company>
-    <PackageLicenseUrl>https://github.com/fiskaltrust/middleware-interface-dotnet/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/fiskaltrust/middleware-interface-dotnet</PackageProjectUrl>
-    <PackageIconUrl>https://portal.fiskaltrust.at/Content/favicons/favicon-64x64.png</PackageIconUrl>
-    <Description>An optional helper implementation to simplify the usage of the fiskaltrust Middleware interface via gRPC.</Description>
-    <Copyright>Copyright 2020</Copyright>
-    <PackageTags>fiskaltrust interface</PackageTags>
-    <AssemblyCompany>fiskaltrust</AssemblyCompany>
-    <AssemblyProduct>fiskaltrust.Middleware.Interface.Grpc</AssemblyProduct>
-  </PropertyGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
+		<PackageReference Include="Grpc.Net.Client" Version="2.40.0" />
+		<PackageReference Include="protobuf-net.Grpc" Version="1.0.152" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\fiskaltrust.Middleware.Interface.Client.Common\fiskaltrust.Middleware.Interface.Client.Common.csproj">
+			<PrivateAssets>all</PrivateAssets>
+		</ProjectReference>
+	</ItemGroup>
+
+	<PropertyGroup>
+		<TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
+	</PropertyGroup>
+	<Target DependsOnTargets="ResolveReferences" Name="CopyProjectReferencesToPackage">
+		<ItemGroup>
+			<BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
+		</ItemGroup>
+	</Target>
+
+	<PropertyGroup>
+		<PackageId>fiskaltrust.Middleware.Interface.Client.Grpc</PackageId>
+		<Authors>fiskaltrust</Authors>
+		<Company>fiskaltrust</Company>
+		<PackageLicenseUrl>https://github.com/fiskaltrust/middleware-interface-dotnet/LICENSE</PackageLicenseUrl>
+		<PackageProjectUrl>https://github.com/fiskaltrust/middleware-interface-dotnet</PackageProjectUrl>
+		<PackageIconUrl>https://portal.fiskaltrust.at/Content/favicons/favicon-64x64.png</PackageIconUrl>
+		<Description>An optional helper implementation to simplify the usage of the fiskaltrust Middleware interface via gRPC.</Description>
+		<Copyright>Copyright 2020</Copyright>
+		<PackageTags>fiskaltrust interface</PackageTags>
+		<AssemblyCompany>fiskaltrust</AssemblyCompany>
+		<AssemblyProduct>fiskaltrust.Middleware.Interface.Grpc</AssemblyProduct>
+	</PropertyGroup>
 
 </Project>
