--- a/src/fiskaltrust.ifPOS/fiskaltrust.interface.csproj
+++ b/src/fiskaltrust.ifPOS/fiskaltrust.interface.csproj
@@ -1,64 +1,42 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  
-  <PropertyGroup>
-    <PackageId>fiskaltrust.interface</PackageId>
-    <Authors>fiskaltrust</Authors>
-    <Company>fiskaltrust</Company>
-    <PackageLicenseUrl>https://github.com/fiskaltrust/middleware-interface-dotnet/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/fiskaltrust/middleware-interface-dotnet</PackageProjectUrl>
-    <PackageIconUrl>https://portal.fiskaltrust.at/Content/favicons/favicon-64x64.png</PackageIconUrl>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Description>fiskaltrust.interface describes the interface that is used to communicate with the fiskaltrust.Middleware</Description>
-    <PackageReleaseNotes>
-      20161024: Added async-interface definition.
-      20160528: Extended interface definition for journal.
-      20160525: Splitted Utilities into seperated package.
-      20160514: Added support for .net35 and pcl, documentation update.
-      20160512: ReceiptRequest und ReceiptResponse erweitert, Dokumentation aktualisiert.
-      20160418: Zusätzlicher Schnittstellendefinition mit der die verwendeten Signaturerstellungseinheiten veröffentlicht werden.
-      20160214: Zusätzliches Feld cbPreviousReceiptID im ReceiptRequest um auf einen relevanten Vorbeleg verweisen zu können.
-      20151030: Definitin der Schnittstelle
-    </PackageReleaseNotes>
-    <Copyright>Copyright 2016</Copyright>
-    <PackageTags>fiskaltrust interface</PackageTags>
-    <TargetFrameworks>net40;net461;netstandard2.0;netstandard2.1</TargetFrameworks>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AssemblyCompany>fiskaltrust consulting gmbh</AssemblyCompany>
-    <AssemblyProduct>fiskaltrust.if</AssemblyProduct>
-  </PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)' == 'net40'">
-    <DefineConstants>WCF</DefineConstants>
-  </PropertyGroup>
+	<PropertyGroup>
+		<PackageId>fiskaltrust.interface</PackageId>
+		<Authors>fiskaltrust</Authors>
+		<Company>fiskaltrust</Company>
+		<PackageLicenseUrl>https://github.com/fiskaltrust/middleware-interface-dotnet/LICENSE</PackageLicenseUrl>
+		<PackageProjectUrl>https://github.com/fiskaltrust/middleware-interface-dotnet</PackageProjectUrl>
+		<PackageIconUrl>https://portal.fiskaltrust.at/Content/favicons/favicon-64x64.png</PackageIconUrl>
+		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+		<Description>fiskaltrust.interface describes the interface that is used to communicate with the fiskaltrust.Middleware</Description>
+		<Copyright>Copyright 2016</Copyright>
+		<PackageTags>fiskaltrust interface</PackageTags>
+		<TargetFrameworks>net461;netstandard2.0;netstandard2.1;net6.0</TargetFrameworks>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<AssemblyCompany>fiskaltrust consulting gmbh</AssemblyCompany>
+		<AssemblyProduct>fiskaltrust.if</AssemblyProduct>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(TargetFramework)' == 'net461'">
+		<DefineConstants>WCF;STREAMING</DefineConstants>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)' == 'net461'">
-    <DefineConstants>WCF;STREAMING</DefineConstants>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'netstandard2.1' or '$(TargetFramework)' == 'net6.0'">
+		<DefineConstants>STREAMING</DefineConstants>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <DefineConstants>STREAMING</DefineConstants>
-  </PropertyGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net461'">
+		<Reference Include="System.Runtime.Serialization" />
+		<Reference Include="System.ServiceModel" />
+		<Reference Include="System.ServiceModel.Web" />
+	</ItemGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
-    <DefineConstants>STREAMING</DefineConstants>
-  </PropertyGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' OR '$(TargetFramework)' == 'net461'">
+		<PackageReference Include="System.Interactive.Async" Version="4.0.0" />
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net40' OR '$(TargetFramework)' == 'net461'">
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.ServiceModel.Web" />
-  </ItemGroup>
-  
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' OR '$(TargetFramework)' == 'net461'">
-    <PackageReference Include="System.Interactive.Async" Version="4.0.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="System.ServiceModel.Primitives" Version="4.5.3" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
-    <PackageReference Include="System.ServiceModel.Primitives" Version="4.5.3" />
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'netstandard2.1' or '$(TargetFramework)' == 'net6.0'">
+		<PackageReference Include="System.ServiceModel.Primitives" Version="4.5.3" />
+	</ItemGroup>
 
 </Project>
