--- a/test/fiskaltrust.Middleware.Interface.Client.Tests/fiskaltrust.Middleware.Interface.Client.Tests.csproj
+++ b/test/fiskaltrust.Middleware.Interface.Client.Tests/fiskaltrust.Middleware.Interface.Client.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461;netcoreapp3.0</TargetFrameworks>
+    <TargetFrameworks>net461;netcoreapp3.0;net6.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
     <LangVersion>8.0</LangVersion>
