--- a/src/fiskaltrust.Middleware.Interface.Client.Soap/fiskaltrust.Middleware.Interface.Client.Soap.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Soap/fiskaltrust.Middleware.Interface.Client.Soap.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-	  <PackageReference Include="fiskaltrust.interface" Version="1.3.46-rc1" />
+	  <PackageReference Include="fiskaltrust.interface" Version="1.3.46-rc1-23150-63596" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net6' ">
