--- a/src/fiskaltrust.Middleware.Interface.Client.Common.StrongName/fiskaltrust.Middleware.Interface.Client.Common.StrongName.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Common.StrongName/fiskaltrust.Middleware.Interface.Client.Common.StrongName.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="fiskaltrust.interface.StrongName" Version="1.3.46-rc1-23163-63803" />
+    <PackageReference Include="fiskaltrust.interface.StrongName" Version="1.3.47-rc1" />
   </ItemGroup>
   
   <ItemGroup>
