--- a/test/fiskaltrust.Middleware.Interface.Tests.Helpers/fiskaltrust.Middleware.Interface.Tests.Helpers.csproj
+++ b/test/fiskaltrust.Middleware.Interface.Tests.Helpers/fiskaltrust.Middleware.Interface.Tests.Helpers.csproj
@@ -13,7 +13,7 @@
   <PropertyGroup Condition="'$(TargetFramework)' == 'net461'">
     <DefineConstants>GRPC;WCF</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
     <DefineConstants>GRPC</DefineConstants>
   </PropertyGroup>
 
@@ -21,7 +21,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net461' OR '$(TargetFramework)' == 'netcoreapp3.0'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'net461' OR '$(TargetFramework)' == 'net6.0'">
     <PackageReference Include="Grpc.Core" Version="2.28.1" />
     <PackageReference Include="protobuf-net.Grpc.Native" Version="1.0.37" />
   </ItemGroup>
