--- a/test/fiskaltrust.ifPOS.Tests/fiskaltrust.Middleware.Interface.Tests.csproj
+++ b/test/fiskaltrust.ifPOS.Tests/fiskaltrust.Middleware.Interface.Tests.csproj
@@ -20,7 +20,7 @@
     <DefineConstants>WCF;GRPC;STREAMING</DefineConstants>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
     <DefineConstants>GRPC;STREAMING</DefineConstants>
   </PropertyGroup>
 
@@ -31,7 +31,7 @@
     <PackageReference Include="NunitXml.TestLogger" Version="2.1.41" />
   </ItemGroup>
   
-  <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.0'">
+  <ItemGroup Condition="'$(TargetFramework)'=='net6.0'">
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="NunitXml.TestLogger" Version="2.1.41" />
@@ -53,7 +53,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net461' OR '$(TargetFramework)' == 'netcoreapp3.0'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'net461' OR '$(TargetFramework)' == 'net6.0'">
     <PackageReference Include="Grpc.Core" Version="2.28.1" />
     <PackageReference Include="protobuf-net.Grpc.Native" Version="1.0.37" />
     <PackageReference Include="System.Interactive.Async" Version="4.0.0" />
